--- a/css/style.css
+++ b/css/style.css
@@ -95,12 +95,12 @@ font-size: 4rem;
 .buttom:hover{
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 }
+/*Mr Footer*/
 .footer{
     width: 100vw;
     height: 51px;
     background-color: #00669F;
-    color: #FFF9F9;         
-
+    color: #FFF9F9;       
 }
 .footer h3{
     padding: 16px 16px 16px;
