--- a/css/style_login.css
+++ b/css/style_login.css
@@ -44,7 +44,36 @@
     max-width: 62rem;
     height: 3.75rem;
     font-size: 1.25rem;
-    }   
+    font-family: 'Karla', sans-serif;
+    font-weight: 400;
+    margin: 1rem 0;
+    color: black;
+    }
+    .button{
+        background-color: #1CD1B0;
+        color: black;
+        width: 62rem;
+        height: 5.3rem;
+        border-radius: 23px;
+        border-style: none;
+        font-size: 2.4rem;
+        font-weight: 400;
+        box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+    }
+
+             
+    p{
+        display: block;     
+        text-align: center;
+        font-family: 'Karla', sans-serif;
+        font-weight: 400;  
+        font-size: 2.1rem; 
+        margin-top: 2rem;
+    }
+    .blue {
+        color: #00669F;
+    }
+
 
     /*Mr Footer*/
     .footer{
