--- a/css/style_login.css
+++ b/css/style_login.css
@@ -11,19 +11,34 @@
     .submenutop{
         background-color:  #1CD1B0;
         width: 100vw;
-        height: 3.8rem;
+        height: 2.3rem;
         font-weight: 400;
     }
     .submenutop h3{
        padding-left: 20px;
-       font-size: 1rem;       
+       font-size: 1.8rem;    
+      
+
     }
     .submenumain{
         background-color:  #00669F;
         width: 100vw;
-        height: 3.8rem;
-        font-weight: 400;    
+        height: 8rem;
+        font-weight: 400;  
+        display: flex; /* aline content*/
     }
+     .logo{
+        width: 9.9rem;
+        height: 7.4rem;
+    }
+    .submenumain h2 {
+        padding-top:2.7rem;
+        padding-left: 2rem;
+        padding-bottom:1.8rem;
+        font-size: 3rem;
+        color: white;
+    }
+
     /*Main now it is a form*/
 
     .form{
@@ -37,17 +52,19 @@
     font-family: 'Inter', sans-serif;
     font-size: 7.2rem;
     margin-bottom: 3.5rem;  
+    font-weight: 700;
     }
 
     .form input{
-    width: 100%;
-    max-width: 62rem;
+    width: 62rem;
     height: 3.75rem;
-    font-size: 1.25rem;
+    font-size: 2rem;
     font-family: 'Karla', sans-serif;
     font-weight: 400;
     margin: 1rem 0;
     color: black;
+    text-indent: 1rem;
+    
     }
     .button{
         background-color: #1CD1B0;
