--- a/css/style_login.css
+++ b/css/style_login.css
@@ -61,10 +61,18 @@
     font-weight: 400;
     margin: 1rem 0;
     color: black;
-    text-indent: 1rem;
-    
+    text-indent: 1rem;    
     }
-    .button{
+    /*Pseudocositas*/
+    .form .user_data:focus, .form .password_data:focus{
+        border: 0.4rem solid orange;
+    }
+    .input_submit:hover{
+        color: white;
+        background-color: #00669F;
+    }   
+
+    .input_submit{
         background-color: #1CD1B0;
         color: black;
         width: 62rem;
@@ -76,7 +84,14 @@
         box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
     }
 
-             
+    p::before{
+        content: "♥";
+        color: red;
+    }   
+    p::after{
+        content: "♥";
+        color: red;
+    }       
     p{
         display: block;     
         text-align: center;
