Revert "Login.html"

--- a/css/style_login.css
+++ b/css/style_login.css
@@ -60,21 +60,11 @@
     font-weight: 400;
     margin: 1rem 0;
     color: black;
-    text-indent: 1rem;    
-    }
-    /*Pseudocositas*/
-    .form .user_data:focus, .form .password_data:focus{
-        border: 0.4rem solid orange;
-    }
-    .input_submit:hover{
-        color: white;
-        background-color: #00669F;
-    }   
-
-    .input_submit{
-    background-color: #1CD1B0;
     text-indent: 1rem;
     outline: none; /*none border property*/
+    }
+    .input_submit{
+    background-color: #1CD1B0;
     color: black;
     width: 62rem;
     height: 5.3rem;
@@ -90,22 +80,18 @@
     }
     
     /*Pseudoclass*/
-
-
     p::before{
-        content: "♥";
-        color: red;
-    }   
+        content: '&&';
+        color: black;
+    }
     p::after{
-        content: "♥";
-        color: red;
-    }       
-
+        content: '&&';
+        color: black;
+    }
     .input_submit:hover{
         background-color: #00669F;
         color: white;
     }          
-
     p{
         display: block;     
         text-align: center;
